--- a/UIDesignTest2/UIDesignTest2.UWP/UIDesignTest2.UWP.csproj
+++ b/UIDesignTest2/UIDesignTest2.UWP/UIDesignTest2.UWP.csproj
@@ -110,6 +110,11 @@
     <Content Include="Assets\notification.png" />
     <Content Include="Assets\shop.png" />
     <Content Include="Assets\user.png" />
+    <Content Include="FAQIcon.png" />
+    <Content Include="logo.PNG" />
+    <Content Include="LogOut.png" />
+    <Content Include="MyAccountIcon.png" />
+    <Content Include="NotifIcon.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
@@ -142,6 +147,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="ShopIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
